# agent-groundwork

./: .gitignore  CLAUDE.md  IMPLEMENTATION_PLAN.md  README.md  SPEC.md  config.toml  pyproject.toml
agent_groundwork/: __main__.py  cli.py  config.py  paths.py  tracing.py
agent_groundwork/agent/: compaction.py  events.py  loop.py  messages.py
agent_groundwork/bakeoff/: __init__.py  __main__.py  harness.py  report.py  scoring.py
agent_groundwork/bakeoff/scenarios/: ambiguous_request.yaml  error_recovery.yaml  impossible_request.yaml  long_context.yaml  multi_step_edit.yaml  no_tool_needed.yaml  search_summarize.yaml  single_tool.yaml  two_step.yaml
agent_groundwork/providers/: base.py  ollama.py
agent_groundwork/tools/: __init__.py  base.py  files.py  interaction.py
findings/: 20260408-hallucinated-tool-calls.md  20260408-prompted-mode-parser.md  README.md  _template.md
sandbox/: .gitignore  AGENT.md
scripts/: agent_smoketest.py  phase1_smoketest.py
tests/: test_paths.py  test_prompted_parser.py
